# subscribe-rewriter

./: .gitignore  Cargo.toml  README.md
clashrw/: Cargo.toml  README.md
clashrw/src/: cache.rs  file_watcher.rs  live_reload.rs  main.rs  parser.rs  web.rs
src/: cache.rs  file_watcher.rs  main.rs  parser.rs  ruleset.rs  singbox.rs  web.rs
