[package]
name = "clashrw"
version = "0.8.3"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6.4"
axum-server = "^0.5"
clap = { version = "4.0.32", features = ["cargo"] }
env_logger = "0.10.0"
hyper = { version = "0.14.20", features = ["http2"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
notify = "^6.0"
once_cell = "1"
oneshot = "0.1.5"
redis = { version = "^0.23", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "socks"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.9"
sha256 = "1"
tap = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
