[package]
name = "clashrw"
version = "0.13.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-server = "0.7"
clap = { version = "4", features = ["cargo"] }
env_logger = "^0.11"
hyper = { version = "1", features = ["http2"] }
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
notify = "8"
oneshot = "0.1.5"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "socks",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha256 = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "^0.6", features = ["trace"] }
